fix: fix Root.tsx not scrolling due to "overflow: hidden;"

--- a/client/src/ui/components/sideBar/SideBar.module.scss
+++ b/client/src/ui/components/sideBar/SideBar.module.scss
@@ -5,6 +5,9 @@
 .title {
   margin: 0;
   color: rgb(var(--sidebar-fg));
+  font-size: 1.25rem;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
 }
 
 .titleContainer {
